Changed service bg filter

--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
             value="SUBMIT"
           />
         </form>
+        <a class="link link--more" href="mail-to:luthospambo@gmail.com">send enquiry</a>
       </section>
     </main>
     <footer>
@@ -273,9 +274,9 @@
           ><span class="fas fa-phone-square"></span> +27 721 172 942</a
         >
         <address class="footer__item">
-          <span class="fas fa-address-card"></span> House 2267 <br />
-          KwaMakhuta <br />
-          4126
+          <span class="fas fa-address-card"></span> Suit 1005 <br />
+          West Tower Building <br />
+          331 West Street <br> Durban
         </address>
       </div>
       <div class="footer__group">
@@ -299,7 +300,7 @@
           rel="no-referrer"
           href="https://facebook.com/merit"
           class="link footer__item"
-          ><span class="fab fa-facebook"></s pan> Facebook</a
+          ><span class="fab fa-facebook"></span> Facebook</a
         >
       </div>
       <div class="footer__group">
