Changed footer links

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             />
             <div class="center">
               <h4 class="service__name">
-                App Development
+                Stationary
               </h4>
               <a href="#0" class="link link--more service--more" data-trigger-for="appDev">MORE</a>
               <div data-modal-text-for="branding" hidden>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda ipsa iusto exercitationem voluptas porro officia, maiores sed harum error vero!</div>
@@ -284,21 +284,21 @@
         <a
           target="_blank"
           rel="no-referrer"
-          href="https://behance.com/merit"
+          href="https://behance.com/luthospambo"
           class="link footer__item"
           ><span class="fab fa-behance"></span> Behance</a
         >
         <a
           target="_blank"
           rel="no-referrer"
-          href="https://instagram.com/merit"
+          href="https://instagram.com/meritbrandinglto"
           class="link footer__item"
           ><span class="fab fa-instagram"></span> Instagram</a
         >
         <a
           target="_blank"
           rel="no-referrer"
-          href="https://facebook.com/merit"
+          href="https://facebook.com/meritbrandinglto"
           class="link footer__item"
           ><span class="fab fa-facebook"></span> Facebook</a
         >
