--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
         close
       </button>
     </dialog>
+    <dialog class="modal modal--enquiry">
+      <h1 class="head-text modal__head">Test</h1>
+      <p class="modal__text">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, nemo?
+      </p>
+      <button id="btnModalClose" class="btn btn--outline btn--modal">
+        submit
+      </button>
+    </dialog>
     <main class="main">
       <!-- START HEADER -->
       <header id="header" class="container">
@@ -99,7 +108,7 @@
                 alt="info card 1"
               />
               <figcaption class="details">
-                <h4 class="card__head">Problem worth solving</h4>
+                <h4 class="card__head" data-modal-head-for="about">Problem worth solving</h4>
                 <details>
                   <summary>
                     Merit Branding LTO is a graphic design and web design/
@@ -126,7 +135,7 @@
                 alt="info card 2"
               />
               <figcaption class="details">
-                <h4 class="card__head">Our Solutions</h4>
+                <h4 class="card__head" data-modal-head-for="solutions">Our Solutions</h4>
                 <details>
                   <summary>
                     We take advantage of modern software tooling to satisfy all
@@ -159,7 +168,7 @@
               src="https://images.unsplash.com/photo-1561070791-2526d30994b5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=80"
             />
             <div class="center">
-              <h4 class="service__name">
+              <h4 class="service__name" data-modal-head-for="branding">
                 Branding
               </h4>
               <a href="#0" class="link link--more service--more" data-trigger-for="branding">MORE</a>
@@ -173,11 +182,11 @@
             />
             <!-- <div class="service__stripe"></div> -->
             <div class="center">
-              <h4 class="service__name">
+              <h4 class="service__name" data-modal-head-for="stationary">
                 Web Design
               </h4>
-              <a href="#0" class="link link--more service--more" data-trigger-for="webDesign">MORE</a>
-              <div data-modal-text-for="branding" hidden>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda ipsa iusto exercitationem voluptas porro officia, maiores sed harum error vero!</div>
+              <a href="#0" class="link link--more service--more" data-trigger-for="stationary">MORE</a>
+              <div data-modal-text-for="stationary" hidden>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda ipsa iusto exercitationem voluptas porro officia, maiores sed harum error vero!</div>
             </div>
           </figure>
           <figure class="service card">
@@ -186,11 +195,11 @@
               src="https://images.unsplash.com/photo-1542744173-b3cd6377db95?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
             />
             <div class="center">
-              <h4 class="service__name">
+              <h4 class="service__name" data-modal-head-for="appDev">
                 Stationary
               </h4>
               <a href="#0" class="link link--more service--more" data-trigger-for="appDev">MORE</a>
-              <div data-modal-text-for="branding" hidden>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda ipsa iusto exercitationem voluptas porro officia, maiores sed harum error vero!</div>
+              <div data-modal-text-for="appDev" hidden>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda ipsa iusto exercitationem voluptas porro officia, maiores sed harum error vero!</div>
             </div>
           </figure>
         </div>
@@ -246,9 +255,11 @@
             class="btn btn--primary form__submit"
             type="submit"
             value="SUBMIT"
+            data-trigger-for="enquiry"
           />
+          <div data-modal-head-for="enquiry" hidden>Before we go</div>
+          <div data-modal-text-for="enquiry" hidden>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda ipsa iusto exercitationem voluptas porro officia, maiores sed harum error vero!</div>
         </form>
-        <a class="link link--more" href="mail-to:luthospambo@gmail.com">send enquiry</a>
       </section>
     </main>
     <footer>
