Modal enquiry works

--- a/index.html
+++ b/index.html
@@ -64,16 +64,17 @@
       </button>
     </dialog>
     <dialog class="modal modal--enquiry">
-      <h1 class="head-text modal__head">BEFORE YOU GO</h1>
-
-      <button id="btnModalClose" class="btn btn--outline btn--modal">
-        JUST SUBMIT
-      </button>
-      <button class="btn btn--modal">SEND ENQUIRY</button>
-      <div class="enquiry__form">
+      <div class="enquiry__group">
+        <h1 class="head-text modal__head">BEFORE YOU GO</h1>
+        <button id="btnJustSubmit" class="btn btn--outline btn--modal submit-email">
+          JUST SUBMIT
+        </button>
+        <button id="showEnq" class="btn btn--modal">SEND ENQUIRY</button>
+      </div>
+      <div class="enquiry__group enquiry__form">
         <h1 class="head-text modal__head">ENQUIRY</h1>
         <fieldset class="form__field">
-          <label for="name">What should we call you?</label>
+          <label class="label" for="name">What should we call you?</label>
           <input
             id="name"
             type="text"
@@ -82,15 +83,16 @@
           />
         </fieldset>
         <fieldset class="form__field">
-          <label for="enquiry">What's on your mind?</label>
+          <label class="label" for="enquiry">What's on your mind?</label>
           <textarea
             type="text"
             placeholder="Type on!"
+            cols="12"
             class="input modal__input input--area"
           ></textarea>
         </fieldset>
 
-        <input type="submit" id="enqSubmit" class="btn form__submit" />
+        <input type="submit" value="SUBMIT" id="enqSubmit" class="btn form__submit" />
       </div>
     </dialog>
     <main class="main">
