Added request qoute button

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <a href="#team" class="link">Team</a>
         <a href="#contact" class="link">Contact</a>
       </div>
-      <span></span>
+      <a href="#contact" class="link link--primary">Request Qoute</a>
     </nav>
 
     <!-- END NAV -->
@@ -81,7 +81,6 @@
           <textarea
             type="text"
             placeholder="Type on!"
-            cols="12"
             class="input modal__input input--area"
           ></textarea>
         </fieldset>
