Updated member qoutes

--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
               <h3 class="member__name">Lutho Spambo</h3>
               <span class="tag">CEO, FOUNDER</span>
               <p class="member__qoute">
-                I love more than I should. That's the only thing that goes above
-                my love for graphic design. Let's have fun and make your ideas
-                real.
+                I'm a graphic designer a reasoner color philosopher. Web
+                designer and developer. Favourite qoute "Design is intelligence
+                made visible"
               </p>
             </figcaption>
           </figure>
@@ -286,7 +286,7 @@
             />
             <figcaption class="member__details">
               <h3 class="member__name">Simo Swssr</h3>
-              <span class="tag">UI/UX</span>
+              <span class="tag">UI/UX Designer</span>
               <p class="member__qoute">
                 Having the temperament of an introverted old man, I'm convinced
                 my keyboard and brain hate me, they've gone through a lot of
