--- a/index.html
+++ b/index.html
@@ -59,20 +59,22 @@
       <p class="modal__text">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, nemo?
       </p>
-      <button id="btnModalClose" class="btn btn--outline btn--modal">
+      <ul class="modal__list">
+        <div class="list-fade"></div>
+        <div class="list-fade"></div>
+        
+      </ul>
+      <button id="btnModalClose" class="btn btn--modal">
         close
       </button>
     </dialog>
     <dialog class="modal modal--enquiry">
       <div class="enquiry__group">
         <h1 class="head-text modal__head">BEFORE YOU GO</h1>
-        <button
-          id="btnJustSubmit"
-          class="btn btn--outline btn--modal submit-email"
-        >
+        <button id="btnJustSubmit" class="btn btn--modal btn--fill submit-email">
           JUST SUBMIT
         </button>
-        <button id="showEnq" class="btn btn--modal">SEND ENQUIRY</button>
+        <button id="showEnq" class="btn btn--modal btn--fill">SEND ENQUIRY</button>
       </div>
       <div class="enquiry__group enquiry__form">
         <h1 class="head-text modal__head">ENQUIRY</h1>
@@ -126,7 +128,7 @@
           <h1 class="head-text">OUR VISION</h1>
           <p class="subtext">what's a venture without a mission.</p>
           <div class="hr-list">
-            <div class="card card--info">
+            <figure class="card card--info">
               <img
                 class="card__img"
                 src="https://images.unsplash.com/photo-1444718070663-99afd7176287?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
@@ -154,8 +156,8 @@
                   more <span class="fas fa-chevron-right"></span>
                 </button>
               </figcaption>
-            </div>
-            <div class="card card--info">
+            </figure>
+            <figure class="card card--info">
               <img
                 class="card__img"
                 src="https://images.unsplash.com/photo-1532622785990-d2c36a76f5a6?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
@@ -183,7 +185,7 @@
                   more <span class="fas fa-chevron-right"></span>
                 </button>
               </figcaption>
-            </div>
+            </figure>
           </div>
         </div>
       </section>
@@ -203,13 +205,12 @@
               <a
                 href="#0"
                 class="link link--more service--more"
+                data-has-list="true"
                 data-trigger-for="branding"
                 >MORE</a
               >
               <div data-modal-text-for="branding" hidden>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Assumenda ipsa iusto exercitationem voluptas porro officia,
-                maiores sed harum error vero!
+                Let us help you realize your brand identity and messaging.
               </div>
             </div>
           </figure>
@@ -226,13 +227,13 @@
               <a
                 href="#0"
                 class="link link--more service--more"
+                data-has-list="true"
                 data-trigger-for="stationary"
                 >MORE</a
               >
-              <div data-modal-text-for="stationary" hidden>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Assumenda ipsa iusto exercitationem voluptas porro officia,
-                maiores sed harum error vero!
+              <div data-modal-text-for="appDev" hidden>
+                World design application is our middlename. scroll and order what
+                you want.
               </div>
             </div>
           </figure>
@@ -248,13 +249,12 @@
               <a
                 href="#0"
                 class="link link--more service--more"
+                data-has-list="true"
                 data-trigger-for="appDev"
                 >MORE</a
               >
-              <div data-modal-text-for="appDev" hidden>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Assumenda ipsa iusto exercitationem voluptas porro officia,
-                maiores sed harum error vero!
+              <div data-modal-text-for="stationary" hidden>
+                From business function to weedings, we got you covered. see...
               </div>
             </div>
           </figure>
