--- a/index.html
+++ b/index.html
@@ -63,17 +63,27 @@
         <div class="list-fade"></div>
         <div class="list-fade"></div>
       </ul>
-      <button id="btnModalClose" class="btn btn--modal">
-        close
-      </button>
+      <div class="rows">
+        <button id="btnRequestProdQoute" class="btn btn--primary">
+          Request qoute
+        </button>
+        <button id="btnModalClose" class="btn btn--modal">
+          close
+        </button>
+      </div>
     </dialog>
-    <dialog class="modal modal--enquiry">
+    <dialog class="modal modal--enquiry modal--small">
       <div class="enquiry__group">
         <h1 class="head-text modal__head">BEFORE YOU GO</h1>
-        <button id="btnJustSubmit" class="btn btn--modal btn--fill submit-email">
+        <button
+          id="btnJustSubmit"
+          class="btn btn--modal btn--fill submit-email"
+        >
           JUST SUBMIT
         </button>
-        <button id="showEnq" class="btn btn--modal btn--fill">SEND ENQUIRY</button>
+        <button id="showEnq" class="btn btn--modal btn--fill">
+          SEND ENQUIRY
+        </button>
       </div>
       <div class="enquiry__group enquiry__form">
         <h1 class="head-text modal__head">ENQUIRY</h1>
@@ -204,7 +214,7 @@
               <a
                 href="#0"
                 class="link link--more service--more"
-                data-has-list="true"
+                data-has-data="true"
                 data-trigger-for="branding"
                 >MORE</a
               >
@@ -226,13 +236,13 @@
               <a
                 href="#0"
                 class="link link--more service--more"
-                data-has-list="true"
+                data-has-data="true"
                 data-trigger-for="stationary"
                 >MORE</a
               >
               <div data-modal-text-for="appDev" hidden>
-                World design application is our middlename. scroll and order what
-                you want.
+                World design application is our middlename. scroll and order
+                what you want.
               </div>
             </div>
           </figure>
@@ -248,7 +258,7 @@
               <a
                 href="#0"
                 class="link link--more service--more"
-                data-has-list="true"
+                data-has-data="true"
                 data-trigger-for="appDev"
                 >MORE</a
               >
@@ -311,6 +321,7 @@
             class="btn btn--primary form__submit"
             type="submit"
             value="SUBMIT"
+            data-is-form="true"
             data-trigger-for="enquiry"
           />
           <div data-modal-head-for="enquiry" hidden>Before we go</div>
