added horizontal drag to scroll modal list.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <p class="modal__text">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, nemo?
       </p>
-      <ul class="modal__list">
+      <ul class="wide-list">
         <div class="list-fade"></div>
         <div class="list-fade"></div>
       </ul>
