Reordered social links

--- a/index.html
+++ b/index.html
@@ -119,15 +119,18 @@
         </div>
         <div class="social-icons">
           <a
-            href="https://behance.com/luthospambo"
-            class="icon fab fa-behance"
-          ></a>
-          <a
             href="https://www.instagram.com/meritbrandinglto/"
             class="icon fab fa-instagram"
           >
           </a>
-          <a href="https://facebook.com/merit" class="icon fab fa-facebook">
+          <a
+            href="https://behance.com/luthospambo"
+            class="icon fab fa-behance"
+          ></a>
+          <a
+            href="https://facebook.com/meritbrandiglto"
+            class="icon fab fa-facebook"
+          >
           </a>
         </div>
       </header>
@@ -367,13 +370,6 @@
         <a
           target="_blank"
           rel="no-referrer"
-          href="https://behance.com/luthospambo"
-          class="link footer__item"
-          ><span class="fab fa-behance"></span> Behance</a
-        >
-        <a
-          target="_blank"
-          rel="no-referrer"
           href="https://instagram.com/meritbrandinglto"
           class="link footer__item"
           ><span class="fab fa-instagram"></span> Instagram</a
@@ -381,7 +377,14 @@
         <a
           target="_blank"
           rel="no-referrer"
-          href="https://facebook.com/meritbrandinglto"
+          href="https://behance.com/luthospambo"
+          class="link footer__item"
+          ><span class="fab fa-behance"></span> Behance</a
+        >
+        <a
+          target="_blank"
+          rel="no-referrer"
+          href="https://facebook.com/meritbrandiglto"
           class="link footer__item"
           ><span class="fab fa-facebook"></span> Facebook</a
         >
