--- a/index.html
+++ b/index.html
@@ -59,17 +59,9 @@
       <p class="modal__text">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, nemo?
       </p>
-      <ul class="wide-list">
-        <div class="list-fade"></div>
-        <div class="list-fade"></div>
-      </ul>
+      <ul class="wide-list"></ul>
       <div class="rows">
-        <button id="btnRequestProdQoute" class="btn btn--primary">
-          Request qoute
-        </button>
-        <button id="btnModalClose" class="btn btn--modal">
-          close
-        </button>
+        <button id="btnModalClose" class="btn btn--modal"></button>
       </div>
     </dialog>
     <dialog class="modal modal--enquiry modal--small">
