removed card overlap

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
           class="btn form__submit"
         />
       </div>
+      <button id="btnModalClose" class="btn btn--modal"></button>
     </dialog>
     <main class="main">
       <!-- START HEADER -->
@@ -127,8 +128,7 @@
         </div>
       </header>
       <!-- END HEADER -->
-      <section class="container container--short">
-        <div class="card card--overlap" id="vision">
+      <section class="container container--short container--overlap">
           <h1 class="head-text">OUR VISION</h1>
           <p class="subtext">what's a venture without a mission.</p>
           <div class="hr-list">
@@ -191,7 +191,6 @@
               </figcaption>
             </figure>
           </div>
-        </div>
       </section>
       <section class="container" id="services">
         <h1 class="head-text">WHAT WE DO</h1>
