Darkened first info cards

--- a/index.html
+++ b/index.html
@@ -128,69 +128,69 @@
         </div>
       </header>
       <!-- END HEADER -->
-      <section class="container container--short container--overlap">
-          <h1 class="head-text">OUR VISION</h1>
-          <p class="subtext">what's a venture without a mission.</p>
-          <div class="hr-list">
-            <figure class="card card--info">
-              <img
-                class="card__img"
-                src="https://images.unsplash.com/photo-1444718070663-99afd7176287?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
-                alt="info card 1"
-              />
-              <figcaption class="details">
-                <h4 class="card__head" data-modal-head-for="about">
-                  Problem worth solving
-                </h4>
-                <details>
-                  <summary>
-                    Merit Branding LTO is a graphic design and web design/
-                    development company
-                  </summary>
-                  <p data-modal-text-for="about">
-                    We create new and better designs for companies that needs
-                    brand development.
-                    <br />
-                    We're a digital marketing company that exists to help
-                    develop companies either existing or not existing to gain
-                    customers or audience
-                  </p>
-                </details>
-                <button class="link link--more" data-trigger-for="about">
-                  more <span class="fas fa-chevron-right"></span>
-                </button>
-              </figcaption>
-            </figure>
-            <figure class="card card--info">
-              <img
-                class="card__img"
-                src="https://images.unsplash.com/photo-1532622785990-d2c36a76f5a6?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
-                alt="info card 2"
-              />
-              <figcaption class="details">
-                <h4 class="card__head" data-modal-head-for="solutions">
-                  Our Solutions
-                </h4>
-                <details>
-                  <summary>
-                    We take advantage of modern software tooling to satisfy all
-                    your business needs, no middle-man.</summary
-                  >
-                  <p data-modal-text-for="solutions">
-                    We create posters, event cards, logos, business card,
-                    magazine designs, newspaper, ﬂyers, website design. The
-                    mission is to elevate business with quality designs by
-                    branding and advertising their products. Using modern
-                    designs and software to better other businesses to be more
-                    visible to the world and increasing traffic and profit.
-                  </p>
-                </details>
-                <button class="link link--more" data-trigger-for="solutions">
-                  more <span class="fas fa-chevron-right"></span>
-                </button>
-              </figcaption>
-            </figure>
-          </div>
+      <section class="container container--short flex flex--col">
+        <h1 class="head-text">OUR VISION</h1>
+        <p class="subtext">what's a venture without a mission.</p>
+        <div class="hr-list">
+          <figure class="card card--info">
+            <img
+              class="card__img"
+              src="https://images.unsplash.com/photo-1444718070663-99afd7176287?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
+              alt="info card 1"
+            />
+            <figcaption class="details">
+              <h4 class="card__head" data-modal-head-for="about">
+                Problem worth solving
+              </h4>
+              <details>
+                <summary>
+                  Merit Branding LTO is a graphic design and web design/
+                  development company
+                </summary>
+                <p data-modal-text-for="about">
+                  We create new and better designs for companies that needs
+                  brand development.
+                  <br />
+                  We're a digital marketing company that exists to help develop
+                  companies either existing or not existing to gain customers or
+                  audience
+                </p>
+              </details>
+              <button class="link link--more" data-trigger-for="about">
+                more <span class="fas fa-chevron-right"></span>
+              </button>
+            </figcaption>
+          </figure>
+          <figure class="card card--info">
+            <img
+              class="card__img"
+              src="https://images.unsplash.com/photo-1532622785990-d2c36a76f5a6?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+              alt="info card 2"
+            />
+            <figcaption class="details">
+              <h4 class="card__head" data-modal-head-for="solutions">
+                Our Solutions
+              </h4>
+              <details>
+                <summary>
+                  We take advantage of modern software tooling to satisfy all
+                  your business needs, no middle-man.</summary
+                >
+                <p data-modal-text-for="solutions">
+                  We create posters, event cards, logos, business card, magazine
+                  designs, newspaper, ﬂyers, website design. The mission is to
+                  elevate business with quality designs by branding and
+                  advertising their products. Using modern designs and software
+                  to better other businesses to be more visible to the world and
+                  increasing traffic and profit.
+                </p>
+              </details>
+              <button class="link link--more" data-trigger-for="solutions">
+                more <span class="fas fa-chevron-right"></span>
+              </button>
+            </figcaption>
+          </figure>
+        </div>
       </section>
       <section class="container" id="services">
         <h1 class="head-text">WHAT WE DO</h1>
@@ -263,6 +263,10 @@
           </figure>
         </div>
       </section>
+      <section class="container flex flex--col">
+        <h1 class="head-text">OUR WORK</h1>
+        <p class="subtext">some of the work we've done.</p>
+      </section>
       <section class="container" id="team">
         <h1 class="head-text">MEET THE BRAINS</h1>
         <p class="subtext">Sad and highly motivated pack of kayotes!</p>
@@ -306,7 +310,7 @@
         <form class="form">
           <input
             class="input input--wide form__input"
-            placeholder="human@example.com"
+            placeholder="HUMAN@EXAMPLE.COM"
             inputmode="email"
             type="text"
             name="email"
@@ -326,17 +330,9 @@
           </div>
         </form>
       </section>
+      <section class="container"></section>
     </main>
     <footer>
-      <div class="footer__group">
-        <img
-          src="assets/images/icons/SVG/merit logo.svg"
-          width="100"
-          height="100"
-          alt="logo"
-        />
-      </div>
-
       <div class="footer__group">
         <h4 class="footer__head">Contact</h4>
         <span class="footer__item"
@@ -350,59 +346,59 @@
           ><span class="fas fa-phone-square"></span> +27 721 172 942</a
         >
         <address class="footer__item">
-          <span class="fas fa-address-card"></span> Suit 1005 <br />
-          West Tower Building <br />
-          331 West Street <br />
-          Durban
+          <span class="fas fa-address-card"></span> Suit 1005 West Tower
+          Building, <br />
+          331 West Street Durban
         </address>
       </div>
-      <div class="footer__group">
-        <h4 class="footer__head">Social media</h4>
+      <div class="">
         <a
           target="_blank"
           rel="no-referrer"
           href="https://instagram.com/meritbrandinglto"
           class="link footer__item"
-          ><span class="fab fa-instagram"></span> Instagram</a
-        >
+          ><span class="fab fa-instagram"></span
+        ></a>
         <a
           target="_blank"
           rel="no-referrer"
           href="https://behance.com/luthospambo"
           class="link footer__item"
-          ><span class="fab fa-behance"></span> Behance</a
-        >
+          ><span class="fab fa-behance"></span
+        ></a>
         <a
           target="_blank"
           rel="no-referrer"
           href="https://facebook.com/meritbrandiglto"
           class="link footer__item"
-          ><span class="fab fa-facebook"></span> Facebook</a
-        >
+          ><span class="fab fa-facebook"></span
+        ></a>
       </div>
-      <div class="footer__group">
-        <h4 class="footer__head">Legal</h4>
-        <a
-          target="_blank"
-          rel="no-referrer"
-          href="/legal.html/privacy"
-          class="link footer__item"
-          >Privacy</a
-        >
-        <a
-          target="_blank"
-          rel="no-referrer"
-          href="/legal.html/terms"
-          class="link footer__item"
-          >Terms</a
-        >
-        <a
-          target="_blank"
-          rel="no-referrer"
-          href="/legal.html/copyright"
-          class="link footer__item"
-          >Copyright</a
-        >
+      <div>
+        <div class="footer__group">
+          <h4 class="footer__head">Legal</h4>
+          <a
+            target="_blank"
+            rel="no-referrer"
+            href="/legal.html/privacy"
+            class="link footer__item"
+            >Privacy</a
+          >
+          <a
+            target="_blank"
+            rel="no-referrer"
+            href="/legal.html/terms"
+            class="link footer__item"
+            >Terms</a
+          >
+          <a
+            target="_blank"
+            rel="no-referrer"
+            href="/legal.html/copyright"
+            class="link footer__item"
+            >Copyright</a
+          >
+        </div>
       </div>
     </footer>
     <script src="assets/lib/dialog-polyfill.js"></script>
